# tron-wasm

./: .gitignore  README.md  babel.config.js  jest.config.js  package-lock.json  package.json  post-install.sh  tsconfig.json  webpack.config.js
crates/bot/: Cargo.toml
crates/bot/src/: grid.rs  lib.rs  position.rs
docs/: 1.golang.worker.js  1.rust.worker.js  2.golang.worker.js  app.666a378a374803a1b4a2.js  golang.worker.js  index.html  main.wasm  rust.worker.js  typescript.worker.js
go/bot/: go.sum  main.go
public/: index.html  webpack.config.js
src/: App.vue  icons.ts  main.ts  store.ts
src/bots/: WorkerWrapper.ts  types.ts
src/bots/cpp/: CppWrapper.ts  webpack.config.js  worker.ts
src/bots/golang/: GoWrapper.ts  webpack.config.js  worker.ts
src/bots/rust/: Cargo.toml  RustWrapper.ts  webpack.config.js  worker.ts
src/bots/typescript/: Bot.ts  webpack.config.js  worker.ts
src/common/: constants.ts  functions.ts  interfaces.ts  types.ts  utils.ts
src/components/: Actions.vue  Button.vue  Grid.vue  Insights.vue  Loader.vue  Scores.vue
src/engine/: Bot.ts  Game.ts  GoAI.ts  Grid.ts  PlayerFactory.ts  RustAI.ts  RustPlayer.ts  TsPlayer.ts  TsPlayerFactory.ts  TypescriptAI.ts
src/html/: index.html
src/worker/: BotWorker.ts  custom.d.ts  glue.worker.ts  types.ts
src/workers/: Wrapper.ts  bot.worker.ts  types.ts
src/workers/bot/: BotWorker.ts  worker.ts
src/workers/go/: bot.worker.ts
tests/mocks/: bot.worker.ts  glue.worker.ts
tests/unit/: Bot.spec.ts  BotWorker.spec.ts  Game.spec.ts  TsPlayer.spec.ts  Wrapper.spec.ts  utils.ts
(+5 files in other folders)
