[package]
name = "bot"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.6"
wasm-bindgen = "0.2.29"
console_error_panic_hook = { version = "0.1.5", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
web-sys = { version = "0.3", features = ["console"] }
serde_json = "1.0"

[features]
default-features = ["console_error_panic_hook"]
